[package]
name = "hot-restart-proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
tokio = { version = "1.11.0", features = ["full"] }
clap = "2.33.3"
anyhow = "1.0.32"
serde = {version="1.0.130", features=["derive"]}
serde_yaml = "0.8.20"
unix-ipc = {version="0.2.0", features = ["serde", "bootstrap", "bootstrap-simple"]}
net2 = "0.2.37"
